--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,11 +4,17 @@
     // 欲了解更多信息，请访问: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
-    
+        {
+            "type": "chrome",
+            "request": "launch",
+            "name": "Launch Chrome",
+            // "url": "http://localhost:8080",
+            "file": "${file}",
+        },
         {
             "type": "node",
             "request": "launch",
-            "name": "Launch Program",
+            "name": "Node环境",
             "program": "${file}"
         }
     ]
