--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,13 @@
     "cSpell.words": [
         "childs",
         "glyphicon",
+        "liststyle",
+        "publishtime",
+        "readtimes",
         "servlet",
+        "x",
+        "zhangweiqiang",
+        "zmjz",
         "ztree"
     ],
     "cSpell.ignoreWords": [
