--- a/React/day07/app/package.json
+++ b/React/day07/app/package.json
@@ -3,18 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "antd": "^3.22.0",
-    "axios": "^0.19.0",
+    "antd": "^3.22.1",
     "babel-plugin-import": "^1.12.0",
     "customize-cra": "^0.5.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
-    "qs": "^6.8.0",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
     "react-dom": "^16.9.0",
-    "react-router-dom": "^5.0.1",
-    "react-scripts": "3.1.1"
+    "react-scripts": "3.1.1",
+    "redux": "^4.0.4"
   },
   "scripts": {
     "start": "react-app-rewired start",
